<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridView
        android:id="@+id/grid_images"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:numColumns="auto_fit"
        android:columnWidth="90dp"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:layout_marginTop="0dp" />

</android.support.constraint.ConstraintLayout>